--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -325,7 +325,7 @@ jobs:
       - store_artifacts:
           path: /tmp/storybook/cypress
           destination: cypress
-  e2e:
+  integration-tests:
     working_directory: /tmp/storybook
     docker:
       - image: cypress/included:4.7.0
@@ -345,7 +345,7 @@ jobs:
           command: yarn await-serve-storybooks
       - run:
           name: cypress run
-          command: yarn test:e2e
+          command: yarn test:integration
       - store_artifacts:
           path: /tmp/storybook/cypress
           destination: cypress
@@ -482,7 +482,7 @@ workflows:
           requires:
             - install-examples-deps
             - build
-      - e2e:
+      - integration-tests:
           requires:
             - examples
       - smoke-tests:
