--- a/addons/docs/package.json
+++ b/addons/docs/package.json
@@ -117,6 +117,7 @@
     "terser-webpack-plugin": "^3.0.0",
     "tmp": "^0.2.1",
     "tslib": "^2.0.0",
+    "vue3": "npm:vue@^3.0.0",
     "web-component-analyzer": "^1.0.3",
     "webpack": "^4.44.2",
     "zone.js": "^0.11.3"
@@ -128,7 +129,7 @@
     "react": "^16.8.0 || ^17.0.0",
     "react-dom": "^16.8.0 || ^17.0.0",
     "sveltedoc-parser": "^3.0.4",
-    "vue": "^2.6.10",
+    "vue": "^2.6.10 || >=3.0.0",
     "webpack": ">=4"
   },
   "peerDependenciesMeta": {
