--- a/app/angular/package.json
+++ b/app/angular/package.json
@@ -74,7 +74,10 @@
     "@types/jest": "^25.1.1",
     "jest": "^26.0.0",
     "jest-preset-angular": "^8.3.2",
-    "ts-jest": "^26.4.4"
+    "rxjs": "^6.6.3",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.2",
+    "zone.js": "^0.11.3"
   },
   "peerDependencies": {
     "@angular-devkit/build-angular": ">=0.8.9",
@@ -86,7 +89,6 @@
     "@angular/forms": ">=6.0.0",
     "@angular/platform-browser": ">=6.0.0",
     "@angular/platform-browser-dynamic": ">=6.0.0",
-    "@babel/core": "*",
     "rxjs": "^6.0.0",
     "typescript": "^3.4.0 || >=4.0.0",
     "zone.js": "^0.8.29 || ^0.9.0 || ^0.10.0 || ^0.11.0"
