--- a/app/aurelia/package.json
+++ b/app/aurelia/package.json
@@ -31,10 +31,12 @@
     "@storybook/addons": "6.2.0-alpha.6",
     "@storybook/core": "6.2.0-alpha.6",
     "@storybook/node-logger": "6.2.0-alpha.6",
+    "core-js": "^3.0.1",
     "fork-ts-checker-webpack-plugin": "^4.0.3",
     "global": "^4.3.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "regenerator-runtime": "^0.13.7",
     "ts-loader": "^6.0.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.2"
@@ -55,7 +57,8 @@
     "webpack": "^4.44.2"
   },
   "peerDependencies": {
-    "aurelia": "*"
+    "aurelia": "*",
+    "typescript": "*"
   },
   "publishConfig": {
     "access": "public"
