--- a/app/marionette/package.json
+++ b/app/marionette/package.json
@@ -29,16 +29,16 @@
     "common-tags": "^1.8.0",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
-    "html-loader": "^1.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
-    "backbone.marionette": "*"
+    "backbone": "^1.4.0",
+    "backbone.marionette": "^4.1.3",
+    "underscore": "^1.12.0"
   },
   "peerDependencies": {
-    "@babel/core": "*",
     "backbone": "*",
     "backbone.marionette": "*",
     "underscore": "*"
