--- a/app/mithril/package.json
+++ b/app/mithril/package.json
@@ -41,10 +41,10 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@babel/core": "^7.12.3",
     "@babel/plugin-transform-react-jsx": "^7.12.1",
     "@storybook/addons": "6.2.0-alpha.6",
     "@storybook/core": "6.2.0-alpha.6",
+    "@types/babel__core": "^7.1.12",
     "@types/mithril": "^2.0.0",
     "@types/webpack-env": "^1.15.3",
     "core-js": "^3.0.1",
@@ -58,7 +58,6 @@
     "mithril": "^1.1.6"
   },
   "peerDependencies": {
-    "@babel/core": "*",
     "mithril": "^1.1.6 || ^2.0.0"
   },
   "engines": {
