--- a/app/rax/package.json
+++ b/app/rax/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "@storybook/core": "6.2.0-alpha.6",
+    "@types/babel__core": "^7.1.12",
     "babel-preset-rax": "^1.0.0-beta.0",
     "core-js": "^3.0.1",
     "driver-dom": "^2.0.0",
@@ -55,7 +56,6 @@
     "rax": "^1.1.0"
   },
   "peerDependencies": {
-    "@babel/core": "*",
     "rax": "^0.4.0 || ^1.0.0"
   },
   "publishConfig": {
