--- a/app/react/package.json
+++ b/app/react/package.json
@@ -52,6 +52,7 @@
     "@storybook/core": "6.2.0-alpha.6",
     "@storybook/node-logger": "6.2.0-alpha.6",
     "@storybook/semver": "^7.3.2",
+    "@types/babel__core": "^7.1.12",
     "@types/webpack-env": "^1.15.3",
     "babel-plugin-add-react-displayname": "^0.0.5",
     "babel-plugin-named-asset-import": "^0.3.1",
@@ -68,20 +69,18 @@
     "webpack": "^4.44.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.9",
     "@storybook/client-api": "6.2.0-alpha.6",
     "@types/node": "^14.0.10",
     "@types/prompts": "^2.0.0",
-    "@types/webpack": "^4.41.24"
+    "@types/webpack": "^4.41.24",
+    "typescript": "^3.9.7"
   },
   "peerDependencies": {
-    "@babel/core": "^7.11.5",
     "react": "^16.8.0 || ^17.0.0",
     "react-dom": "^16.8.0 || ^17.0.0"
   },
   "peerDependenciesMeta": {
-    "@babel/core": {
-      "optional": true
-    },
     "typescript": {
       "optional": true
     }
