--- a/app/vue/package.json
+++ b/app/vue/package.json
@@ -58,12 +58,12 @@
   "devDependencies": {
     "@types/node": "^14.0.10",
     "@types/webpack": "^4.41.24",
+    "css-loader": "^3.6.0",
     "vue": "^2.6.8",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.8"
   },
   "peerDependencies": {
-    "@babel/core": "*",
     "babel-loader": "^7.0.0 || ^8.0.0",
     "css-loader": "*",
     "ts-loader": "^6.2.2",
