chore(addon): more `react` and `react-dom` to regular deps
Have both these packages as peerDep is causing a lot of `unmet peer dependency` warnings.
However, there is no need to worry about them because there is a webpack alias in `@storybook/core` so all import of react in addons are aliased to the one from `@storybook/core`.

For details, see https://github.com/storybookjs/storybook/issues/13194

I didn't use `*` as version range but the one used in `app/*` to have only 1 version in the monorepo `node_modules`.

--- a/addons/google-analytics/package.json
+++ b/addons/google-analytics/package.json
@@ -24,20 +24,10 @@
     "@storybook/core-events": "6.2.0-alpha.6",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-ga": "^2.5.7",
     "regenerator-runtime": "^0.13.7"
-  },
-  "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0"
-  },
-  "peerDependenciesMeta": {
-    "react": {
-      "optional": true
-    },
-    "react-dom": {
-      "optional": true
-    }
   },
   "publishConfig": {
     "access": "public"
