--- a/addons/toolbars/package.json
+++ b/addons/toolbars/package.json
@@ -34,19 +34,9 @@
     "@storybook/api": "6.2.0-alpha.6",
     "@storybook/client-api": "6.2.0-alpha.6",
     "@storybook/components": "6.2.0-alpha.6",
-    "core-js": "^3.0.1"
-  },
-  "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0"
-  },
-  "peerDependenciesMeta": {
-    "react": {
-      "optional": true
-    },
-    "react-dom": {
-      "optional": true
-    }
+    "core-js": "^3.0.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
   },
   "publishConfig": {
     "access": "public"
