--- a/addons/controls/package.json
+++ b/addons/controls/package.json
@@ -37,19 +37,9 @@
     "@storybook/node-logger": "6.2.0-alpha.6",
     "@storybook/theming": "6.2.0-alpha.6",
     "core-js": "^3.0.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "ts-dedent": "^2.0.0"
-  },
-  "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0"
-  },
-  "peerDependenciesMeta": {
-    "react": {
-      "optional": true
-    },
-    "react-dom": {
-      "optional": true
-    }
   },
   "publishConfig": {
     "access": "public"
