--- a/addons/docs/package.json
+++ b/addons/docs/package.json
@@ -80,6 +80,8 @@
     "lodash": "^4.17.15",
     "prettier": "~2.0.5",
     "prop-types": "^15.7.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-element-to-jsx-string": "^14.3.1",
     "regenerator-runtime": "^0.13.7",
     "remark-external-links": "^6.0.0",
@@ -125,20 +127,12 @@
     "@babel/core": "^7.11.5",
     "@storybook/vue": "6.2.0-alpha.6",
     "babel-loader": "^8.0.0",
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0",
     "sveltedoc-parser": "^3.0.4",
     "vue": "^2.6.10",
     "webpack": ">=4"
   },
   "peerDependenciesMeta": {
     "@storybook/vue": {
-      "optional": true
-    },
-    "react": {
-      "optional": true
-    },
-    "react-dom": {
       "optional": true
     },
     "sveltedoc-parser": {
