--- a/addons/essentials/package.json
+++ b/addons/essentials/package.json
@@ -45,6 +45,8 @@
     "@storybook/api": "6.2.0-alpha.6",
     "@storybook/node-logger": "6.2.0-alpha.6",
     "core-js": "^3.0.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^2.0.0"
   },
@@ -58,18 +60,10 @@
     "@babel/core": "^7.9.6",
     "@storybook/vue": "6.2.0-alpha.6",
     "babel-loader": "^8.0.0",
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0",
     "webpack": ">=4"
   },
   "peerDependenciesMeta": {
     "@storybook/vue": {
-      "optional": true
-    },
-    "react": {
-      "optional": true
-    },
-    "react-dom": {
       "optional": true
     },
     "webpack": {
