--- a/addons/jest/package.json
+++ b/addons/jest/package.json
@@ -49,24 +49,14 @@
     "@storybook/theming": "6.2.0-alpha.6",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-sizeme": "^2.5.2",
     "regenerator-runtime": "^0.13.7",
     "upath": "^1.1.0"
   },
   "devDependencies": {
     "@types/webpack-env": "^1.15.3"
-  },
-  "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0"
-  },
-  "peerDependenciesMeta": {
-    "react": {
-      "optional": true
-    },
-    "react-dom": {
-      "optional": true
-    }
   },
   "publishConfig": {
     "access": "public"
