--- a/lib/cli/package.json
+++ b/lib/cli/package.json
@@ -54,13 +54,13 @@
     "cross-spawn": "^7.0.0",
     "envinfo": "^7.5.1",
     "express": "^4.17.1",
+    "fastest-levenshtein": "^1.0.12",
     "find-up": "^4.1.0",
     "fs-extra": "^9.0.0",
     "get-port": "^5.1.1",
     "globby": "^11.0.0",
     "jscodeshift": "^0.6.3",
     "json5": "^2.1.1",
-    "leven": "^3.1.0",
     "prompts": "^2.0.0",
     "puppeteer-core": "^2.0.0",
     "read-pkg-up": "^7.0.1",
