chore(react-ts-example): add strictBindCallApply to tsconfig

--- a/examples/cra-ts-essentials/tsconfig.json
+++ b/examples/cra-ts-essentials/tsconfig.json
@@ -5,6 +5,7 @@
     "noImplicitAny": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "strictBindCallApply": true,
     "jsx": "react",
     "module": "commonjs",
     "skipDefaultLibCheck": true,
