--- a/package.json
+++ b/package.json
@@ -93,6 +93,10 @@
   "resolutions": {
     "serialize-javascript": "^3.0.0"
   },
+  "dependencies": {
+    "@compodoc/compodoc": "^1.1.11",
+    "web-component-analyzer": "^1.1.6"
+  },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.3",
@@ -109,9 +113,69 @@
     "@babel/runtime": "^7.12.1",
     "@emotion/snapshot-serializer": "^0.8.2",
     "@nicolo-ribaudo/chokidar-2": "^2.1.8",
+    "@storybook/addon-a11y": "workspace:*",
+    "@storybook/addon-actions": "workspace:*",
+    "@storybook/addon-backgrounds": "workspace:*",
+    "@storybook/addon-controls": "workspace:*",
+    "@storybook/addon-cssresources": "workspace:*",
+    "@storybook/addon-decorator": "workspace:*",
+    "@storybook/addon-design-assets": "workspace:*",
+    "@storybook/addon-docs": "workspace:*",
+    "@storybook/addon-essentials": "workspace:*",
+    "@storybook/addon-events": "workspace:*",
+    "@storybook/addon-google-analytics": "workspace:*",
+    "@storybook/addon-graphql": "workspace:*",
+    "@storybook/addon-jest": "workspace:*",
+    "@storybook/addon-knobs": "workspace:*",
+    "@storybook/addon-links": "workspace:*",
+    "@storybook/addon-parameter": "workspace:*",
+    "@storybook/addon-preview-wrapper": "workspace:*",
+    "@storybook/addon-queryparams": "workspace:*",
+    "@storybook/addon-roundtrip": "workspace:*",
+    "@storybook/addon-storyshots": "workspace:*",
+    "@storybook/addon-storyshots-puppeteer": "workspace:*",
+    "@storybook/addon-storysource": "workspace:*",
+    "@storybook/addon-toolbars": "workspace:*",
+    "@storybook/addon-viewport": "workspace:*",
+    "@storybook/addons": "workspace:*",
+    "@storybook/angular": "workspace:*",
+    "@storybook/api": "workspace:*",
+    "@storybook/aurelia": "workspace:*",
+    "@storybook/channel-postmessage": "workspace:*",
+    "@storybook/channel-websocket": "workspace:*",
+    "@storybook/channels": "workspace:*",
+    "@storybook/cli": "workspace:*",
+    "@storybook/client-api": "workspace:*",
+    "@storybook/client-logger": "workspace:*",
+    "@storybook/codemod": "workspace:*",
+    "@storybook/components": "workspace:*",
+    "@storybook/core": "workspace:*",
+    "@storybook/core-events": "workspace:*",
+    "@storybook/ember": "workspace:*",
     "@storybook/eslint-config-storybook": "^2.4.0",
+    "@storybook/example-devkits": "workspace:*",
+    "@storybook/example-react-ts": "workspace:*",
+    "@storybook/html": "workspace:*",
     "@storybook/linter-config": "^2.5.0",
+    "@storybook/marionette": "workspace:*",
+    "@storybook/marko": "workspace:*",
+    "@storybook/mithril": "workspace:*",
+    "@storybook/node-logger": "workspace:*",
+    "@storybook/postinstall": "workspace:*",
+    "@storybook/preact": "workspace:*",
+    "@storybook/rax": "workspace:*",
+    "@storybook/react": "workspace:*",
+    "@storybook/riot": "workspace:*",
+    "@storybook/root": "workspace:*",
+    "@storybook/router": "workspace:*",
     "@storybook/semver": "^7.3.2",
+    "@storybook/server": "workspace:*",
+    "@storybook/source-loader": "workspace:*",
+    "@storybook/svelte": "workspace:*",
+    "@storybook/theming": "workspace:*",
+    "@storybook/ui": "workspace:*",
+    "@storybook/vue": "workspace:*",
+    "@storybook/web-components": "workspace:*",
     "@testing-library/dom": "^7.26.3",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^10.0.3",
@@ -133,6 +197,8 @@
     "@types/shelljs": "^0.8.7",
     "@types/webpack": "^4.41.24",
     "@types/webpack-env": "^1.15.3",
+    "angular-cli": "workspace:*",
+    "aurelia-kitchen-sink": "workspace:*",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^26.0.0",
@@ -148,10 +214,15 @@
     "commander": "^6.2.0",
     "concurrently": "^5.2.0",
     "core-js": "^3.0.1",
+    "cra-kitchen-sink": "workspace:*",
+    "cra-react15": "workspace:*",
+    "cra-ts-essentials": "workspace:*",
+    "cra-ts-kitchen-sink": "workspace:*",
     "cross-env": "^7.0.0",
     "danger": "^10.1.1",
     "detect-port": "^1.3.0",
     "downlevel-dts": "^0.6.0",
+    "ember-example": "workspace:*",
     "enquirer": "^2.3.5",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1",
@@ -165,6 +236,7 @@
     "fs-extra": "^9.0.0",
     "github-release-from-changelog": "^2.1.0",
     "glob": "^7.1.3",
+    "html-kitchen-sink": "workspace:*",
     "http-server": "^0.12.3",
     "husky": "^4.0.10",
     "jest": "^26.0.0",
@@ -182,31 +254,43 @@
     "lerna": "^3.19.0",
     "lint-staged": "^10.2.1",
     "lodash": "^4.17.15",
+    "marko-cli": "workspace:*",
+    "mithril-example": "workspace:*",
     "mocha-list-tests": "^1.0.2",
     "node-cleanup": "^2.1.2",
     "node-fetch": "^2.6.0",
     "npmlog": "^4.1.2",
+    "official-storybook": "workspace:*",
     "p-limit": "^2.3.0",
+    "preact-example": "workspace:*",
     "prettier": "~2.0.5",
     "prompts": "^2.0.0",
     "raf": "^3.4.0",
+    "rax-kitchen-sink": "workspace:*",
     "regenerator-runtime": "^0.13.7",
     "remark": "^12.0.0",
     "remark-cli": "^8.0.0",
     "remark-lint": "^7.0.0",
     "remark-preset-lint-recommended": "^4.0.0",
+    "riot-example": "workspace:*",
     "riot-jest-transformer": "^2.0.0",
     "serve-static": "^1.14.1",
+    "server-kitchen-sink": "workspace:*",
     "shelljs": "^0.8.4",
     "shx": "^0.3.2",
     "sort-package-json": "^1.42.1",
+    "standalone-preview": "workspace:*",
+    "svelte-example": "workspace:*",
     "teamcity-service-messages": "^0.1.11",
     "trash": "^6.1.1",
     "ts-dedent": "^2.0.0",
     "ts-jest": "^26.4.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.3",
+    "vue-cli-example": "workspace:*",
+    "vue-example": "workspace:*",
     "wait-on": "^5.2.0",
+    "web-components-kitchen-sink": "workspace:*",
     "webpack": "^4.44.2",
     "window-size": "^1.1.1"
   },
