--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,7 @@ jobs:
             - build-yarn-cache-v4--
       - run:
           name: Install dependencies
-          command: yarn install --frozen-lockfile --cache-folder ~/.cache/yarn
+          command: yarn install --immutable
       - run:
           name: Bootstrap
           command: yarn bootstrap --core
@@ -99,7 +99,7 @@ jobs:
           name: Save Yarn cache
           key: build-yarn-cache-v4--{{ checksum "yarn.lock" }}
           paths:
-            - ~/.cache/yarn
+            - ~/.yarn/berry/cache
       - persist_to_workspace:
           root: .
           paths:
@@ -121,12 +121,12 @@ jobs:
             - install-examples-deps-yarn-cache-v4--
       - run:
           name: Install dependencies
-          command: yarn install --frozen-lockfile --cache-folder ~/.cache/yarn
+          command: yarn install --immutable
       - save_cache:
           name: Save Yarn cache
           key: install-examples-deps-yarn-cache-v4--{{ checksum "yarn.lock" }}
           paths:
-            - ~/.cache/yarn
+            - ~/.yarn/berry/cache
       - persist_to_workspace:
           root: .
           paths:
@@ -148,7 +148,7 @@ jobs:
             - install-e2e-deps-node_modules-cache-v1--{{ checksum "yarn.lock" }}
       - run:
           name: Install dependencies if cache wasn't hit
-          command: "[ ! -d \"node_modules/\" ] && yarn install --frozen-lockfile || echo \"Skipping yarn install\""
+          command: "[ ! -d \"node_modules/\" ] && yarn install --immutable || echo \"Skipping yarn install\""
       - save_cache:
           name: Save node_modules
           key: install-e2e-deps-node_modules-cache-v1--{{ checksum "yarn.lock" }}
@@ -248,10 +248,10 @@ jobs:
           command: yarn wait-on http://localhost:6000
       - run:
           name: set registry
-          command: yarn config set registry http://localhost:6000/
+          command: yarn config set npmRegistryServer http://localhost:6000/
       - run:
           name: test local registry
-          command: yarn info @storybook/core
+          command: yarn npm info @storybook/core
       - run:
           name: Install Cypress binary
           command: yarn cypress install
@@ -280,10 +280,10 @@ jobs:
           command: yarn wait-on http://localhost:6000
       - run:
           name: Set registry
-          command: yarn config set registry http://localhost:6000/
+          command: yarn config set npmRegistryServer http://localhost:6000/
       - run:
           name: Test local registry
-          command: yarn info @storybook/core
+          command: yarn npm info @storybook/core
       - run:
           name: Install Cypress binary
           command: yarn cypress install
@@ -312,10 +312,10 @@ jobs:
           command: yarn wait-on http://localhost:6000
       - run:
           name: set registry
-          command: yarn config set registry http://localhost:6000/
+          command: yarn config set npmRegistryServer http://localhost:6000/
       - run:
           name: test local registry
-          command: yarn info @storybook/core
+          command: yarn npm info @storybook/core
       - run:
           name: Install Cypress binary
           command: yarn cypress install
