--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,14 +141,14 @@ jobs:
           clone_options: '--depth 1 --verbose'
       - run:
           name: Keep only root package
-          command: rm -rf examples/ && rm -rf addons/ && rm -rf app/ && rm -rf lib/
+          command: rm -rf examples/ addons/ app/ lib/ dev-kits/
       - restore_cache:
           name: Restore cached node_modules
           keys:
             - install-e2e-deps-node_modules-cache-v1--{{ checksum "yarn.lock" }}
       - run:
           name: Install dependencies if cache wasn't hit
-          command: "[ ! -d \"node_modules/\" ] && yarn install --immutable || echo \"Skipping yarn install\""
+          command: "[ ! -d \"node_modules/\" ] && yarn remove '@storybook/*' || echo \"Skipping yarn install\""
       - save_cache:
           name: Save node_modules
           key: install-e2e-deps-node_modules-cache-v1--{{ checksum "yarn.lock" }}
@@ -425,7 +425,10 @@ jobs:
           clone_options: '--depth 1 --verbose'
       - run:
           name: Install dependencies
-          command: yarn bootstrap --install
+          command: yarn install --immutable
+      - run:
+          name: Bootstrap
+          command: yarn bootstrap
       - run:
           name: Trigger build
           command: ./scripts/build-frontpage.js
