--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,3 +2,5 @@ yarnPath: ".yarn/releases/yarn-berry.cjs"
 enableGlobalCache: true
 compressionLevel: 0
 nodeLinker: node-modules
+unsafeHttpWhitelist:
+  - localhost
