--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,8 +87,8 @@ jobs:
       - restore_cache:
           name: Restore Yarn cache
           keys:
-            - build-yarn-cache-v4--{{ checksum "yarn.lock" }}
-            - build-yarn-cache-v4--
+            - build-yarn-2-cache-v1--{{ checksum "yarn.lock" }}
+            - build-yarn-2-cache-v1--
       - run:
           name: Install dependencies
           command: yarn install
@@ -97,7 +97,7 @@ jobs:
           command: yarn bootstrap --core
       - save_cache:
           name: Save Yarn cache
-          key: build-yarn-cache-v4--{{ checksum "yarn.lock" }}
+          key: build-yarn-2-cache-v1--{{ checksum "yarn.lock" }}
           paths:
             - ~/.yarn/berry/cache
       - persist_to_workspace:
@@ -117,14 +117,14 @@ jobs:
       - restore_cache:
           name: Restore Yarn cache
           keys:
-            - install-examples-deps-yarn-cache-v4--{{ checksum "yarn.lock" }}
-            - install-examples-deps-yarn-cache-v4--
+            - install-examples-deps-yarn-2-cache-v1--{{ checksum "yarn.lock" }}
+            - install-examples-deps-yarn-2-cache-v1--
       - run:
           name: Install dependencies
           command: yarn install --immutable
       - save_cache:
           name: Save Yarn cache
-          key: install-examples-deps-yarn-cache-v4--{{ checksum "yarn.lock" }}
+          key: install-examples-deps-yarn-2-cache-v1--{{ checksum "yarn.lock" }}
           paths:
             - ~/.yarn/berry/cache
       - persist_to_workspace:
@@ -145,7 +145,7 @@ jobs:
       - restore_cache:
           name: Restore cached node_modules
           keys:
-            - install-e2e-deps-node_modules-cache-v1--{{ checksum "yarn.lock" }}
+            - install-e2e-deps-node_modules-cache-v2--{{ checksum "yarn.lock" }}
       - run:
           name: Install dependencies if cache wasn't hit
           command: "[ ! -d \"node_modules/\" ] && yarn remove '@storybook/*' || echo \"Skipping yarn install\""
