--- a/examples/cra-react15/package.json
+++ b/examples/cra-react15/package.json
@@ -21,6 +21,7 @@
     "@storybook/addon-actions": "6.2.0-alpha.16",
     "@storybook/addon-links": "6.2.0-alpha.16",
     "@storybook/addons": "6.2.0-alpha.16",
+    "@storybook/preset-create-react-app": "^3.1.6-alpha.0",
     "@storybook/react": "6.2.0-alpha.16",
     "@storybook/theming": "6.2.0-alpha.16",
     "babel-core": "6",
