--- a/lib/api/package.json
+++ b/lib/api/package.json
@@ -31,8 +31,7 @@
     "*.d.ts"
   ],
   "scripts": {
-    "prepare": "node ./scripts/generateVersion.js && node ../../scripts/prepare.js",
-    "postversion": "node ./scripts/generateVersion.js"
+    "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
     "@reach/router": "^1.3.4",
@@ -59,6 +58,7 @@
     "@types/lodash": "^4.14.167",
     "@types/semver": "^7.3.4",
     "flush-promises": "^1.0.2",
+    "preval.macro": "^5.0.0",
     "qs": "^6.9.5"
   },
   "peerDependencies": {
