--- a/app/svelte/package.json
+++ b/app/svelte/package.json
@@ -42,6 +42,8 @@
   },
   "dependencies": {
     "@storybook/addons": "6.2.0-alpha.25",
+    "@storybook/client-api": "6.2.0-alpha.25",
+    "@storybook/client-logger": "6.2.0-alpha.25",
     "@storybook/core": "6.2.0-alpha.25",
     "core-js": "^3.8.2",
     "global": "^4.4.0",
