--- a/app/angular/package.json
+++ b/app/angular/package.json
@@ -74,6 +74,7 @@
     "@angular/forms": "^11.0.9",
     "@angular/platform-browser": "^11.0.9",
     "@angular/platform-browser-dynamic": "^11.0.9",
+    "@ngtools/webpack": "^11.0.7",
     "@nrwl/workspace": "^11.1.5",
     "@types/autoprefixer": "^9.7.2",
     "@types/jest": "^25.2.3",
