--- a/examples/angular-cli-new/.storybook/tsconfig.json
+++ b/examples/angular-cli-new/.storybook/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "../tsconfig.app.json",
   "exclude": ["../src/karma.ts", "../src/**/*.spec.ts"],
-  "include": ["../src/**/*"]
+  "include": ["../src/**/*"],
+  "compilerOptions": {
+
+  }
 }
