--- a/examples/angular-cli-new/package.json
+++ b/examples/angular-cli-new/package.json
@@ -1,16 +1,16 @@
 {
   "name": "angular-cli-new",
   "version": "6.2.0-alpha.16",
+  "private": true,
   "scripts": {
+    "build": "ng build",
+    "e2e": "ng e2e",
+    "lint": "ng lint",
     "ng": "ng",
     "start": "ng serve",
     "storybook": "start-storybook -p 9001",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "test": "ng test"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.9",
     "@angular/common": "~11.0.9",
@@ -29,7 +29,7 @@
     "@angular/cli": "~11.0.6",
     "@angular/compiler-cli": "~11.0.9",
     "@storybook/addons": "6.2.0-alpha.16",
-    "@storybook/angular-new": "6.2.0-alpha.16",
+    "@storybook/angular": "6.2.0-alpha.16",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
