--- a/app/angular/package.json
+++ b/app/angular/package.json
@@ -47,6 +47,7 @@
     "@types/webpack-env": "^1.16.0",
     "autoprefixer": "^9.8.6",
     "core-js": "^3.8.2",
+    "cross-spawn": "^7.0.3",
     "fork-ts-checker-webpack-plugin": "^4.1.6",
     "global": "^4.4.0",
     "postcss": "^7.0.35",
@@ -77,6 +78,7 @@
     "@angular/platform-browser-dynamic": "^11.1.2",
     "@nrwl/workspace": "^11.1.5",
     "@types/autoprefixer": "^9.7.2",
+    "@types/cross-spawn": "^6.0.2",
     "@types/jest": "^25.2.3",
     "@webcomponents/custom-elements": "^1.4.3",
     "jest": "^26.6.3",
