--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -439,7 +439,7 @@ jobs:
           at: .
       - run:
           name: Test
-          command: yarn test --coverage
+          command: yarn test --coverage --runInBand --ci
       - persist_to_workspace:
           root: .
           paths:
