chore: fix unit test related to WC in addons-docs

--- a/addons/docs/package.json
+++ b/addons/docs/package.json
@@ -127,7 +127,9 @@
     "@babel/core": "^7.11.5",
     "@storybook/angular": "6.2.0-alpha.24",
     "@storybook/vue": "6.2.0-alpha.24",
+    "@storybook/web-components": "6.2.0-alpha.24",
     "babel-loader": "^8.0.0",
+    "lit-html": "^1.0.0",
     "react": "^16.8.0 || ^17.0.0",
     "react-dom": "^16.8.0 || ^17.0.0",
     "sveltedoc-parser": "^3.0.4",
@@ -139,6 +141,12 @@
       "optional": true
     },
     "@storybook/vue": {
+      "optional": true
+    },
+    "@storybook/web-components": {
+      "optional": true
+    },
+    "lit-html": {
       "optional": true
     },
     "react": {
