--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,7 +87,7 @@ jobs:
             - build-yarn-2-cache-v1--{{ checksum "yarn.lock" }}
       - run:
           name: Install dependencies
-          command: yarn install
+          command: yarn install --immutable
       - run:
           name: Bootstrap
           command: yarn bootstrap --core
