--- a/lib/core-common/package.json
+++ b/lib/core-common/package.json
@@ -75,6 +75,7 @@
     "interpret": "^2.2.0",
     "json5": "^2.1.3",
     "lazy-universal-dotenv": "^3.0.1",
+    "lodash": "^4.17.20",
     "micromatch": "^4.0.2",
     "pkg-dir": "^5.0.0",
     "pretty-hrtime": "^1.0.3",
