--- a/examples/ember-cli/package.json
+++ b/examples/ember-cli/package.json
@@ -17,6 +17,8 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@ember/optional-features": "^2.0.0",
+    "@glimmer/component": "^1.0.2",
+    "@glimmer/tracking": "^1.0.2",
     "@storybook/addon-a11y": "6.2.0-beta.14",
     "@storybook/addon-actions": "6.2.0-beta.14",
     "@storybook/addon-backgrounds": "6.2.0-beta.14",
@@ -28,22 +30,22 @@
     "@storybook/addon-viewport": "6.2.0-beta.14",
     "@storybook/addons": "6.2.0-beta.14",
     "@storybook/ember": "6.2.0-beta.14",
-    "@storybook/ember-cli-storybook": "^0.2.1",
+    "@storybook/ember-cli-storybook": "^0.3.1",
     "@storybook/source-loader": "6.2.0-beta.14",
     "babel-loader": "^8",
     "broccoli-asset-rev": "^3.0.0",
     "cross-env": "^7.0.3",
     "ember-ajax": "^5.0.0",
     "ember-cli": "~3.24.0",
-    "ember-cli-app-version": "^4.0.0",
+    "ember-cli-app-version": "^5.0.0",
     "ember-cli-babel": "^7.23.0",
-    "ember-cli-htmlbars": "^4.4.0",
+    "ember-cli-htmlbars": "^5.6.5",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-uglify": "^3.0.0",
     "ember-load-initializers": "^2.1.2",
-    "ember-resolver": "^7.0.0",
+    "ember-resolver": "^8.0.2",
     "ember-source": "~3.24.0",
     "loader.js": "^4.7.0",
     "webpack": "4",
